After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706364 - compositor: fix focusing the stage window
compositor: fix focusing the stage window
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-20 07:46 UTC by Giovanni Campagna
Modified: 2013-08-20 12:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
compositor: fix focusing the stage window (10.62 KB, patch)
2013-08-20 07:46 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-08-20 07:46:43 UTC
We can't use the X11 stage window, if clutter is not using the X11
backend (and even if it was, it would be bogus when the xwayland
server is not the one clutter is talking to). Instead, we introduce
the concept of "focus type", which we use to differentiate the
various meanings of None in the focus_xwindow field.
Comment 1 Giovanni Campagna 2013-08-20 07:46:45 UTC
Created attachment 252338 [details] [review]
compositor: fix focusing the stage window
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-08-20 12:18:32 UTC
Review of attachment 252338 [details] [review]:

OK.
Comment 3 Giovanni Campagna 2013-08-20 12:42:54 UTC
Attachment 252338 [details] pushed as 876f81d - compositor: fix focusing the stage window